==> lyzh-liyao/Keil_Project/STM32F103_beta1.9集成PCB1.4ESP8266/Driver/MotorControl.c <==
#include "MotorControl.h"

void Motor_Init(void){
	memset(motor_L, 0, sizeof(Motor_T));
	memset(motor_R, 0, sizeof(Motor_T));
	motor_L->Id 						= MOTOR_L;
	motor_L->ENC_TIMx 					= TIM3;
	motor_L->PWM_TIMx 					= TIM2;
	motor_L->TIM_Channel 		= 1;
	motor_L->GPIOx 			= GPIOB;
	motor_L->INA_GPIO_Pinx 	= GPIO_Pin_0;
	motor_L->INB_GPIO_Pinx 	= GPIO_Pin_1;
	PID_Init(&motor_L->PID_Speed, 45, 2, 0, 1, 1000);
	PID_Init(&motor_L->PID_Location, 0.2, 0, 0, 1, 100);
	
	motor_R->Id 						= MOTOR_R;
	motor_R->ENC_TIMx 					= TIM4;
	motor_R->PWM_TIMx 					= TIM2;
	motor_R->TIM_Channel 		= 2;
	motor_R->GPIOx 			= GPIOB;
	motor_R->INA_GPIO_Pinx 	= GPIO_Pin_1;
	motor_R->INB_GPIO_Pinx 	= GPIO_Pin_3;
	motor_R->IsOpposite			= 1;						//转向相反
	PID_Init(&motor_R->PID_Speed, 45, 2, 0, 1, 1000);
	PID_Init(&motor_R->PID_Location, 0.2, 0, 0, 1, 100);
	

	motor_L->Encoder_Cur = motor_R->Encoder_Cur = INIT_ENC;
	motor_L->Encoder_Last = motor_R->Encoder_Last = INIT_ENC;
	motor_L->Speed_Enc = motor_R->Speed_Enc = MAX_ENC / 100;
	motor_L->Motor_Run = motor_R->Motor_Run = _Motor_Run;
	motor_L->Motor_Get_Encoder = motor_R->Motor_Get_Encoder = _Motor_Get_Encoder;
	motor_L->Motor_Custom = motor_R->Motor_Custom = _Motor_Custom;
	motor_L->Enc_Angle_Code = motor_R->Enc_Angle_Code = RING_ENC/360.0;				//度数对应编码值
}

void __Motor_PID_Clear(Motor_T* motor){
	motor->PID_Location.PID_Reset(&motor->PID_Location);
	motor->PID_Speed.PID_Reset(&motor->PID_Speed);
	motor->Encoder_Cur = INIT_ENC;
	motor->Encoder_Last = INIT_ENC;
	TIM_SetCounter(motor->ENC_TIMx,INIT_ENC);
	//TIM_SetCounter(motor_R->ENC_TIMx,INIT_ENC);
	/*motor->Encoder_Cur = INIT_ENC;
	motor->Encoder_Last = INIT_ENC;*/
}

void __Motor_Set_Dir(Motor_T* motor, MOTOR_DIR dir){
	uint8_t direnc,direnc_N = 0;
	if(MOTOR_UP == dir){
		direnc = 0x01;
		direnc_N = 0x00;
	}else if(MOTOR_DOWN == dir){
		direnc = 0x00;
		direnc_N = 0x01;
	}else if(MOTOR_STOP == dir){
		direnc = ~motor->DirCMD; 
		direnc_N = motor->DirCMD;
	}
	motor->DirCMD = dir;
	
	//方向控制
	if(motor->IsOpposite){//如果是反向
		GPIO_WriteBit(motor->GPIOx, motor->INA_GPIO_Pinx, (BitAction)direnc_N);
		//GPIO_WriteBit(motor->GPIOx, motor->INB_GPIO_Pinx, (BitAction)(dir & 0x02));
	}else{//正向
		GPIO_WriteBit(motor->GPIOx, motor->INA_GPIO_Pinx, (BitAction)direnc);
		//GPIO_WriteBit(motor->GPIOx, motor->INB_GPIO_Pinx, (BitAction)(dir & 0x01));
	}
	if(motor->DirCMD == MOTOR_STOP){
		switch(motor->TIM_Channel){
		case 1:TIM_SetCompare1(motor->PWM_TIMx, 0);break;
		case 2:TIM_SetCompare2(motor->PWM_TIMx, 0);break;
		case 3:TIM_SetCompare3(motor->PWM_TIMx, 0);break;
		case 4:TIM_SetCompare4(motor->PWM_TIMx, 0);break;
		}
	}
		
}

void _Motor_Custom(Motor_T* motor, MOTOR_DIR dir, uint16_t speed, int16_t Encoder){
	motor->Cmd_Type = CUSTOM;
	__Motor_Set_Dir(motor, dir);
	motor->SpeedCMD = speed;
	__Motor_PID_Clear(motor);
	//motor->Encoder_CMD_Diff = Encoder;
	if(dir == MOTOR_UP)
		motor->Encoder_CMD = INIT_ENC + Encoder;
	else if(dir == MOTOR_DOWN)
		motor->Encoder_CMD = INIT_ENC - Encoder;
}

static void _Motor_PID_Control(Motor_T* motor){
	float Location_Res = 0,PWM_Res = 0;
	if(motor->DirCMD == MOTOR_STOP)
		return;
	motor->Motor_Get_Encoder(motor); //更新编码器值


	//------------------------编码器差值计算（速度反馈）-------------------------
	if(motor->Overflow_Flag){		//判断定时器计数溢出
		motor->Overflow_Flag = 0;	
		if(motor->Encoder_Last > INIT_ENC){		//向上溢出 上次的值在32767~65535之间
			motor->Encoder_Diff = 0xFFFF - motor->Encoder_Last + motor->Encoder_Cur;
		}else{															//向下溢出 上次的值在0~32767之间
			motor->Encoder_Diff = -(0xFFFF - motor->Encoder_Cur + motor->Encoder_Last);
		}
	}else{
		motor->Encoder_Diff = motor->Encoder_Cur - motor->Encoder_Last;
	}
	motor->Encoder_Last = motor->Encoder_Cur;

	//------------------------电机运动方向辨别-------------------------	
	if(motor->Encoder_Diff > 0){ 			motor->Dir = MOTOR_UP;
	}else if(motor->Encoder_Diff < 0){	motor->Dir = MOTOR_DOWN;
																			motor->Encoder_Diff = -motor->Encoder_Diff;
	}else{															motor->Dir = MOTOR_STOP;}
	
	//------------------------PID计算-------------------------	
	if(motor->Cmd_Type == STRAIGHT){	//直线运动策略
//		if(motor_L->DirCMD == motor_R->DirCMD && motor_L->SpeedCMD == motor_R->SpeedCMD){	//向前或向后运动增加位置环
//			Location_Res = Motor_Location_Calculate(motor, 0);
//		}//直线和转弯都执行匀速运动
		PWM_Res = Motor_Speed_Calculate(motor, (motor->SpeedCMD * motor->Speed_Enc)+Location_Res);
	}else if(motor->Cmd_Type == CUSTOM){//原地转向策略
		if(abs(motor->Encoder_CMD - motor->Encoder_Cur) < 500){//减速策略
			motor->Speed = abs(motor->Encoder_CMD - motor->Encoder_Cur)/500.0 * motor->SpeedCMD;
			if(motor->Speed < 10) motor->Speed = 10;
		}else{
			motor->Speed = motor->SpeedCMD;
		}
		if(motor->Encoder_CMD < INIT_ENC){//后转
			if(motor->Encoder_CMD < motor->Encoder_Cur)//后转未到位
				PWM_Res = Motor_Speed_Calculate(motor, (motor->Speed * motor->Speed_Enc));
			else		//后状到位
			{motor->Motor_Run(motor, MOTOR_STOP, 0); motor->Cmd_Type = NONE;}//NONE用于判断指令执行完成
		}else{														//前转
			if(motor->Encoder_CMD > motor->Encoder_Cur)//前转未到位
				PWM_Res = Motor_Speed_Calculate(motor, (motor->Speed * motor->Speed_Enc));
			else														//前转到位
			{motor->Motor_Run(motor, MOTOR_STOP, 0); motor->Cmd_Type = NONE;}//NONE用于判断指令执行完成
		}
	}
	motor->Out_PWM = PWM_Res;
//>>
	//printf("%d\t%d\t%d\r\n", motor->Motor_Get_Encoder(motor), motor->Encoder_Diff, motor->Encoder_Last);
	/*pid_s = &motor->PID_Speed;
	pid_l = &motor->PID_Location;
	if(motor->Id == MOTOR_L){
		pid_l->PID_Calculate(pid_l, Motor_L.Encoder_Cur - Motor_R.Encoder_Cur, 0);
		pid_s->PID_Calculate(pid_s, motor->Encoder_Diff+1.2, 2 + pid_l->Res);
		//printf("L%f\r\n", pid_l->Res);
	}else{
		pid_l->PID_Calculate(pid_l, Motor_R.Encoder_Cur - Motor_L.Encoder_Cur, 0);
		pid_s->PID_Calculate(pid_s, motor->Encoder_Diff, 2 + pid_l->Res);
		//printf("R%f\r\n", pid_l->Res);
	}
	
	if(pid_s->Res > 999)
		pid_s->Res = 999;
	else if(pid_s->Res < 0)
		pid_s->Res = 0;
	motor->Speed = motor->SpeedCMD = pid_s->Res;*/
	//速度控制
	switch(motor->TIM_Channel){
		case 1:TIM_SetCompare1(motor->PWM_TIMx, motor->Out_PWM);break;
		case 2:TIM_SetCompare2(motor->PWM_TIMx, motor->Out_PWM);break;
		case 3:TIM_SetCompare3(motor->PWM_TIMx, motor->Out_PWM);break;
		case 4:TIM_SetCompare4(motor->PWM_TIMx, motor->Out_PWM);break;
		
	}
	
	/*TIM_SetCompare1(motor->PWM_TIMx, 999);
	TIM_SetCompare2(motor->PWM_TIMx, 999);*/
}
